deployment-definition-XX.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-deployment-XX
  labels:
    app: myapp-XX
    type: front-end

spec:
  template:
    metadata: 
      name: myapp-pod-XX
      labels:
        app: myapp-XX
    spec:
      containers:
        - name: nginx-container
          image: nginx:1.15.12-err

  replicas: 3

  selector:
    matchLabels:
      app: myapp-XX
