nginxhello-red-XX.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginxhello-red-xx
  labels:
    app.kubernetes.io/name: nginxhello-red-xx
    app.kubernetes.io/part-of: nginxhello-red-xx
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: nginxhello-red-xx
      app.kubernetes.io/part-of: nginxhello-red-xx
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nginxhello-red-xx
        app.kubernetes.io/part-of: nginxhello-red-xx
    spec:
      containers:
      - name: nginxhello-red
        image: nbrown/nginxhello:mainline
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginxhello-red-xx
  labels:
    app.kubernetes.io/name: nginxhello-red-xx
    app.kubernetes.io/part-of: nginxhello-red-xx
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app.kubernetes.io/name: nginxhello-red-xx
    app.kubernetes.io/part-of: nginxhello-red-xx
