service-clusterip-definition.yml
apiVersion: v1
kind: Service
metadata:
  name: image-processing
  labels:
    app: myapp
spec:
  type: ClusterIP
  ports:
    - targetPort: 8080
      port: 80
  selector:
    tier: backend
