service-definition-LB-XX.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service-XX

spec:
  type: LoadBalancer
  ports:
    - targetPort: 80
      port: 80      
  
  selector: 
    app: myapp-XX
