service-definition-XX.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service-XX

spec:
  type: NodePort
  ports:
    - targetPort: 80
      port: 80
      nodePort: 30008
  
  selector: 
    app: myapp-XX
