party-clippy-deployment-XX.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: party-clippy-xx
spec:
  template:
    metadata:
      labels:
        app: party-clippy-xx
    spec:
      containers:
      - image: r.j3ss.co/party-clippy
        name: party-clippy-xx
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        tty: true
        command: ["party-clippy"]
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: party-clippy-xx
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: party-clippy-xx
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: party-clippy-xx
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: party-clippy-xx.<nombre-dominio-dns>.io
    http:
      paths:
      - backend:
          serviceName: party-clippy-xx
          servicePort: 80
        path: /
